Added test image

--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,1 +1,11 @@
 <app-header></app-header>
+<div class="container">
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-sm col-md-8">
+            <img src="https://lh3.googleusercontent.com/T6zKP5RFvJymx8jbfvqs0GOKhCzTG3CRuyyP_gqgSfDSoK957oIeBf-Mb8lvAFyhcMz9051KOW1-oHm6uIWqdGyXHOhn1S8hkE8IKd1WQVgs8yoeoV6UC3nd4SIZtsGIJeTDfStq-R8eWF8dP3NdnYjn7N7B5WPaJ3ZPqBsHY1QteEDn7NRFGXII_vn2JanFqCHZUTmPi_5Wu4hqhG6Ty3iC9Au-quJ83aoabl8Rgn-hgHxEFKrQqI7MiebEdd11ghssPVwW1AtRT5DwgvNWz7mr_O0YnhDJEDKJ5vbg3yKCQwWhfO0QMNerpwxJEIzG5H5dK5fhPQLfiObDCL0SzXxEIfKsUfpL1YZo2N40KKJenbo1RHEnQKREfV7uX4UpoEyJCuxRj8JbarsDdRmXTg913zD-qBLJRaUvr-sVHaEi9RPb7dA9WQpK9OvmJSpysw18lGhRvu4DeDDREHfGJi3byu25vG7RCAnSOZPKmdj1nn6a44l4pRvCh1QhY-NvIz2B4QC0dhCAdXxqezXFv2gaY-hEY1KiIye06_9oIqltg8wkEoGMa9c-qvrQyPlqu6qkRZ7gm0bfwnCFgRu8sGOc8wni-rFeQ7g5SyL5-QiAOjSzCuaRtUhOH0gkhHSN8mTMSmruT_e2E1qnTZXb4cDpyTQLAwFTcoATgrKKRyUWwAbc5Q_0qXlevayqm520zMqoOF0J1nHWO5huixvmSWDhUQ=w1380-h776-no"
+                alt="boat">
+        </div>
+        <div class="col"></div>
+    </div>
+</div>
