--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -1,1 +1,9 @@
-<p>about works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col"></div>
+        <div class="col col-10">
+            <h1>Let's Talk</h1>
+        </div>
+        <div class="col"></div>
+    </div>
+</div>
