--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,26 +1,26 @@
 <div class="container">
     <div class="row">
-        <div class="col"></div>
-        <div class="col-sm col-md-8">
+        <div class="col-md-1"></div>
+        <div class="col">
             <img src="https://lh3.googleusercontent.com/T6zKP5RFvJymx8jbfvqs0GOKhCzTG3CRuyyP_gqgSfDSoK957oIeBf-Mb8lvAFyhcMz9051KOW1-oHm6uIWqdGyXHOhn1S8hkE8IKd1WQVgs8yoeoV6UC3nd4SIZtsGIJeTDfStq-R8eWF8dP3NdnYjn7N7B5WPaJ3ZPqBsHY1QteEDn7NRFGXII_vn2JanFqCHZUTmPi_5Wu4hqhG6Ty3iC9Au-quJ83aoabl8Rgn-hgHxEFKrQqI7MiebEdd11ghssPVwW1AtRT5DwgvNWz7mr_O0YnhDJEDKJ5vbg3yKCQwWhfO0QMNerpwxJEIzG5H5dK5fhPQLfiObDCL0SzXxEIfKsUfpL1YZo2N40KKJenbo1RHEnQKREfV7uX4UpoEyJCuxRj8JbarsDdRmXTg913zD-qBLJRaUvr-sVHaEi9RPb7dA9WQpK9OvmJSpysw18lGhRvu4DeDDREHfGJi3byu25vG7RCAnSOZPKmdj1nn6a44l4pRvCh1QhY-NvIz2B4QC0dhCAdXxqezXFv2gaY-hEY1KiIye06_9oIqltg8wkEoGMa9c-qvrQyPlqu6qkRZ7gm0bfwnCFgRu8sGOc8wni-rFeQ7g5SyL5-QiAOjSzCuaRtUhOH0gkhHSN8mTMSmruT_e2E1qnTZXb4cDpyTQLAwFTcoATgrKKRyUWwAbc5Q_0qXlevayqm520zMqoOF0J1nHWO5huixvmSWDhUQ=w1380-h776-no"
                 alt="boat">
         </div>
-        <div class="col"></div>
+        <div class="col-md-1"></div>
     </div>
     <div class="row">
-        <div class="col"></div>
-        <div class="col-sm col-md-8">
+        <div class="col-md-1"></div>
+        <div class="col">
             <img src="https://lh3.googleusercontent.com/fvxsoSw0D7fZCZ9HUyXElV8A__srYpjPiuS2vrx8P0JmY8cAc8FhEfv_qs3YBWec2fxxshq88ZMBVb4e4L9aTsljd2l--_9ctDmzUZKVJbXRed99mqvTj_IAdKhIt1kPYcccmRoMARtnoVz_tP2oL1vpJnTWw-OJGjiEFIVQvMEQVYtq5nK8zHP8PtKZDhuWIbW8Jc4V7s33kJPs4MV_Ic_7pquX6fLWi5RHAChqxOLP7WSx5BeoQ3zkMobNMYduEQ3GduBWvKbv2kXaJs9ZQA1Z17UHv6JKIMAUhJPL-VgdYtnaM3cYZZLZy3ZhuOuICJtwpNN-8WroRHhsQ1CARANhZ0ts4m7BVYcuK6CiQlzn1rJhtCwO8ULkzuT-FrpWjavgMrxwQTcVxfuX5uMLGWPiU6TpfJwQXbuSemuJtqpQCrBdMFo3VzYAkX9U7DEsxXzWWkg3c5pJyuvMBBNS1PC2LhRvV1bB6g63_Wmh0LioOpSv9xTSGmwjJ1n3_UqpKlo-ve1yhgxN9MXz2cLXYi1oOWBTmApr13fh68udCtfgDwC-Wkg5aTqD48rTpPb_yejbmWtRzX0_MoZ9Hpl-xWQxdiQj2MYGy_Xigl4wcAteEKRUEPcPmAC2WIh4AaZX17SSgpESt691KYEIa06S1In9xUAIyMWw=w1379-h921-no"
                 alt="jars on a table">
         </div>
-        <div class="col"></div>
+        <div class="col-md-1"></div>
     </div>
     <div class="row">
-        <div class="col"></div>
-        <div class="col-sm-12 col-md-8">
+        <div class="col-md-1"></div>
+        <div class="col">
             <img src="https://lh3.googleusercontent.com/o9QC70ZGyU1sEfTa3U8HZ_5usxS86Hw1yW6p4QZ0AmrCpVMR7_mSH_85JAaemm9-atGNQYtrk6huxfveWQjEJA1uGIlbNdENNdCT_JAfkbWkcE9lE472CuyZrEzMPtELJpOgFkwjn4hoZxZZCn4pwMIh4PmFxUQ-nu_rKNFRpND9pZBfA5B3xQvNc0oujLdEaiBFE6PYd8HkYYgih1g3Ksh00MElV5iF4k7Rcon-Jku57utQjPQ8uwY-VIYO928l-tjap33DsFaFw09-pJ6fuqaGdv4afOCOGudyf-7KIuvN5K86UpjxrfstkDG_UBxUBObQHACgjl4uRyoQ0L-9-jTu5uZdPNKUEe547y5A2NdPDGu3s07tqlo_gR6uyrJAB0yFT2GjkbjdArG2XHCkOdd9oGpZFmTlSOniDucl8stmSbltarS1AtbXnmAFN9doam4eQ1KVhsb-amxIwnMm8IJ9E3gt0zSubtF0lVhqrjHafHEhbDKPaHjByLHYb5VSTIJAasKriNNhKanUI8s_kT5v0wqnRChQ0D24O59W1VbrTk2Eic8T1V2PGN5JWDLl8fRY80OEAQ5qe2HatzMa_1I8VlaThc_XqXYDPArR5VNeYVxvmGmf6SMESErt5GwuZodDbK8Ea95dna0uckkgfskodXtR_uOH=w1379-h920-no"
                 alt="baby">
         </div>
-        <div class="col"></div>
+        <div class="col-md-1"></div>
     </div>
 </div>
