--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,2 +1,25 @@
-<app-header></app-header>
+<div>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <a class="navbar-brand" routerLink="/">Logo</a>
+
+        <!-- Collapse button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
+            aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+
+        <!-- Collapsible content -->
+        <div routerLinkActive="active-link" class="collapse navbar-collapse" id="navbarSupportedContent15">
+
+            <!-- Links -->
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" routerLink="/about">About</a>
+                </li>
+                <li class="nav-item" routerLinkActive="active">
+                    <a class="nav-link" routerLink="/contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 <router-outlet></router-outlet>
