--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -1,1 +1,24 @@
-Contact works
+<div class="container">
+    <div class="row">
+        <div class="col"></div>
+        <div class="col-md-10">
+            <h1 class="text-center">Let's Talk</h1>
+            <form>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input class="form-control" type="text" id="name">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input class="form-control" type="email" id="email">
+                </div>
+                <div class=" form-group">
+                    <label for="message">Your message</label>
+                    <textarea class="form-control" id="message" rows="5"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+        <div class="col"></div>
+    </div>
+</div>
