Placeholder text and styling updates

--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -2,7 +2,8 @@
     <div class="row">
         <div class="col"></div>
         <div class="col col-10">
-            <h1>Let's Talk</h1>
+            <h1 class="text-center">About me</h1>
+            <p>blah blah</p>
         </div>
         <div class="col"></div>
     </div>
