--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -1,6 +1,9 @@
-.row {
-  margin: 2rem 0;
-  img {
-    width: 100%;
-  }
+.container {
+    margin-top: 3rem;
+    .row {
+      margin: 2rem 0;
+      img {
+        width: 100%;
+      }
+    }
 }
