added images locally and reduced size

--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -2,24 +2,21 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col">
-            <img src="https://lh3.googleusercontent.com/XRFZrSwxWO00vngdnM9jZXwErwNqB0NBu0CWsPESmyt5c5xBvQrJSoMh2-t8A5QEr9JVAnZdzAr8YYlJWpy4H44cTKf9mNRMUpA7xIUhhbt0jQyIqv0OyfY0XBG2wcs8n04ad8vmgro=w918-h517-no"
-                alt="man on a boat">
+            <img src="assets/man_on_a_boat.jpg" alt="man on a boat">
         </div>
         <div class="col-md-1"></div>
     </div>
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col">
-            <img src="https://lh3.googleusercontent.com/YPAH5yLHmlSgPKy52Hqml-CysgmJB_JW3mRuMJIwodWyCYvzwr8DlgKzGasz77suRtKXg4WipIIAqe5_X9dC81TPmA4kn-E9MPDBX32S3d0MURuCDfHTLveUJJkpNdaeEzmv867Mh8c=w774-h517-no"
-                alt="jars on a table">
+            <img src="assets/jars_on_a_table.jpg" alt="jars on a table">
         </div>
         <div class="col-md-1"></div>
     </div>
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col">
-            <img src="https://lh3.googleusercontent.com/Jto4eYFKfgGeLaiB7rGnWRq06kx181atxhqG-1xlEzFNeXuRZ42609BNpAlI1wSMY4662Ev238Hm-d4niQWIGy4vnD0Wlmidovh-88FCe3NW2ubQgfsQujixtJwt2msk09KI0Z18Yec=w1280-h854-no"
-                alt="two men and a baby">
+            <img src="assets/two_men_and_baby.jpg" alt="two men and a baby">
         </div>
         <div class="col-md-1"></div>
     </div>
