--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -9,6 +9,13 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col">
+            <img src="assets/man_on_tracks.jpg" alt="man on tracks">
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col">
             <img src="assets/jars_on_a_table.jpg" alt="jars on a table">
         </div>
         <div class="col-md-1"></div>
