--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,8 @@
 <div>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" routerLink="/">Logo</a>
+        <a class="navbar-brand" routerLink="/">
+            <img src="assets/logo.png" alt="HTP Logo">
+        </a>
 
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
