--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand" routerLink="/">
             <img src="assets/logo.png" alt="HTP Logo">
         </a>
