--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div>
     <nav class="navbar navbar-expand-sm navbar-light">
         <a class="navbar-brand" routerLink="/">
-            <img src="assets/logo.png" alt="HTP Logo">
+            <img src="assets/logo-2.png" alt="HTP Logo">
         </a>
 
         <!-- Collapse button -->
