--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -1,10 +1,33 @@
 <div class="container">
     <div class="row">
-        <div class="col"></div>
-        <div class="col col-10">
+        <div class="col">
             <h1 class="text-center">About me</h1>
-            <p>blah blah</p>
         </div>
-        <div class="col"></div>
+    </div>
+    <div class="row content">
+        <div class="col-sm-8">
+            <div class="row">
+                <div class="col"></div>
+                <div class="col-8">
+                    <p>What once started as a hobby, photography has grown on me and has become a passion of mine. I
+                        enjoy capturing the
+                        special moments in life and sharing a finished album with friends and family. There's nothing
+                        better than seeing the joy
+                        on their faces.</p>
+                    <p>I consider myself a novice photographer with a drive to become better every day.
+                        I have prior experience
+                        shooting at school events during my college years as well as community gatherings and individual
+                        photoshoots.
+                    </p>
+                    <p>Thank you for taking the time to explore my website. Please feel free to
+                        <a routerLink="/contact">contact me</a> with any questions.</p>
+                    <p class="text-right">- Hammad</p>
+                </div>
+                <div class="col"></div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <img src="assets/hammad.jpg" alt="Hammad taking a photo">
+        </div>
     </div>
 </div>
