--- a/src/app/layout/about/about.component.scss
+++ b/src/app/layout/about/about.component.scss
@@ -1,3 +1,12 @@
 .container {
+  margin: 3rem 0;
+  .content {
     margin-top: 3rem;
+    img {
+      display: block;
+      margin: 0 auto;
+      width: 100%;
+      max-width: 300px;
+    }
+  }
 }
