fixed styling issues with about page

--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -6,9 +6,9 @@
     </div>
     <div class="row content">
         <div class="col-sm-8">
-            <div class="row">
-                <div class="col"></div>
-                <div class="col-8">
+            <div class="row text">
+                <div class="col-1"></div>
+                <div class="col">
                     <p>What once started as a hobby, photography has grown on me and has become a passion of mine. I
                         enjoy capturing the
                         special moments in life and sharing a finished album with friends and family. There's nothing
@@ -17,13 +17,12 @@
                     <p>I consider myself a novice photographer with a drive to become better every day.
                         I have prior experience
                         shooting at school events during my college years as well as community gatherings and individual
-                        photoshoots.
-                    </p>
+                        photoshoots.</p>
                     <p>Thank you for taking the time to explore my website. Please feel free to
                         <a routerLink="/contact">contact me</a> with any questions.</p>
-                    <p class="text-right">- Hammad</p>
+                    <p>- Hammad</p>
                 </div>
-                <div class="col"></div>
+                <div class="col-1"></div>
             </div>
         </div>
         <div class="col-sm-4">
