--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -6,4 +6,11 @@
   img {
     width: 90px;
   }
+  .active {
+    border-bottom: 2px solid #ff5700;
+  }
+  .nav-link,
+  .nav-link:hover {
+    color: #000000 !important;
+  }
 }
