Collapse navbar after click on mobile

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -14,10 +14,12 @@
 
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item" routerLinkActive="active">
+                <li class="nav-item" routerLinkActive="active" data-toggle="collapse"
+                    data-target=".navbar-collapse.show">
                     <a class="nav-link" routerLink="/about">About</a>
                 </li>
-                <li class="nav-item" routerLinkActive="active">
+                <li class="nav-item" routerLinkActive="active" data-toggle="collapse"
+                    data-target=".navbar-collapse.show">
                     <a class="nav-link" routerLink="/contact">Contact</a>
                 </li>
             </ul>
