--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col"></div>
-        <div class="col-md-10">
+        <div class="col-10">
             <h1 class="text-center">Let's Talk</h1>
             <form>
                 <div class="form-group">
