Start of adding footer

--- a/src/app/layout/contact/contact.component.scss
+++ b/src/app/layout/contact/contact.component.scss
@@ -1,6 +1,7 @@
 .container {
-    margin-top: 3rem;
-    textarea {
-        resize: none;
-    }
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  textarea {
+    resize: none;
+  }
 }
