--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,5 @@
-<div>
-    <nav class="navbar navbar-expand-sm navbar-light">
+<header>
+    <nav class="navbar navbar-expand-sm navbar-light header">
         <a class="navbar-brand" routerLink="/">
             <img src="assets/logo-2.png" alt="HTP Logo">
         </a>
@@ -25,5 +25,15 @@
             </ul>
         </div>
     </nav>
-</div>
+</header>
 <router-outlet></router-outlet>
+<footer>
+    <nav class="navbar navbar-bottom footer">
+        <a href="https://www.instagram.com/hammadtakespics" target="_blank">
+            <i class="fa fa-3x fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.instagram.com/hammadtakespics" target="_blank">
+            <i class="fa fa-3x fa-facebook-square" aria-hidden="true"></i>
+        </a>
+    </nav>
+</footer>
