--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -3,7 +3,7 @@
         <div class="col"></div>
         <div class="col-10">
             <h1 class="text-center">Let's Talk</h1>
-            <form>
+            <form class="content">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input class="form-control" type="text" id="name">
