--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -16,11 +16,11 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" routerLinkActive="active" data-toggle="collapse"
                     data-target=".navbar-collapse.show">
-                    <a class="nav-link" routerLink="/about">About</a>
+                    <a class="nav-link text-center" routerLink="/about">About</a>
                 </li>
                 <li class="nav-item" routerLinkActive="active" data-toggle="collapse"
                     data-target=".navbar-collapse.show">
-                    <a class="nav-link" routerLink="/contact">Contact</a>
+                    <a class="nav-link text-center" routerLink="/contact">Contact</a>
                 </li>
             </ul>
         </div>
