--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,14 @@
 button {
   outline: none;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+button {
+  font-family: "Proxima Nova Soft", "Helvetica Neue", sans-serif;
+}
