--- a/src/app/layout/about/about.component.scss
+++ b/src/app/layout/about/about.component.scss
@@ -4,6 +4,8 @@
     margin-top: 2rem;
     .text {
       margin-bottom: 2rem;
+      font-size: 1rem;
+      line-height: 1.75;
     }
     img {
       display: block;
