--- a/src/app/layout/contact/contact.component.scss
+++ b/src/app/layout/contact/contact.component.scss
@@ -3,6 +3,9 @@
   margin-bottom: 3rem;
   .content {
     margin-top: 2rem;
+    label {
+      font-size: 1rem;
+    }
     textarea {
       resize: none;
     }
