Collapse navbar when logo is clicked and navmenu is open

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-light header">
         <a class="navbar-brand" routerLink="/">
-            <img src="assets/logo-2.png" alt="HTP Logo">
+            <img src="assets/logo-2.png" alt="HTP Logo" data-toggle="collapse" data-target=".navbar-collapse.show">
         </a>
 
         <!-- Collapse button -->
