--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,24 +1,42 @@
-.header {
-  border-bottom: 2px solid #ebebeb;
-  .navbar-toggler {
-    border-color: transparent;
+.page {
+  position: relative;
+  min-height: 100vh;
+  .content {
+    padding-bottom: 91px;
   }
-  img {
-    width: 90px;
-  }
-  .nav-link,
-  .nav-link:hover {
-    color: #000000 !important;
-  }
-  @media (min-width: 576px) {
-    .active {
-      border-bottom: 2px solid #ff5700;
+  .header {
+    border-bottom: 2px solid #ebebeb;
+    .navbar-toggler {
+      border-color: transparent;
+    }
+    img {
+      width: 90px;
+    }
+    .nav-link,
+    .nav-link:hover {
+      color: #000000 !important;
+    }
+    @media (min-width: 576px) {
+      .active {
+        border-bottom: 2px solid #ff5700;
+      }
     }
   }
-}
-.footer {
-  border-top: 2px solid #ebebeb;
-  a {
-    color: #000000;
+  footer {
+    border-top: 2px solid #ebebeb;
+    position: absolute;
+    bottom: 0 !important;
+    height: 91px;
+    width: 100%;
+    background-color: #fff !important;
+    .social-media-link {
+      display: inline-block;
+      margin-left: 1rem;
+      margin-right: 1rem;
+      margin-top: 1rem;
+    }
+    a {
+      color: #000000;
+    }
   }
 }
