Temporarily disabled Facebook link

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div class="social-media-link">
-                <a href="https://www.instagram.com/hammadtakespics" target="_blank">
+                <a target="_blank">
                     <i class="fa fa-3x fa-facebook-square" aria-hidden="true"></i>
                 </a>
             </div>
