Moved all images to images folder

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -2,7 +2,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-light header">
             <a class="navbar-brand" routerLink="/">
-                <img src="assets/logo-2.png" alt="HTP Logo" data-toggle="collapse" data-target=".navbar-collapse.show">
+                <img src="assets/images/logo-2.png" alt="HTP Logo" data-toggle="collapse"
+                    data-target=".navbar-collapse.show">
             </a>
 
             <!-- Collapse button -->
