--- a/src/app/layout/about/about.component.html
+++ b/src/app/layout/about/about.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="col-sm-4">
-            <img src="assets/hammad.jpg" alt="Hammad taking a photo">
+            <img src="assets/images/hammad.jpg" alt="Hammad taking a photo">
         </div>
     </div>
 </div>
