--- a/src/app/layout/contact/contact.component.html
+++ b/src/app/layout/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col"></div>
-        <div class="col-10">
+        <div class="col-1 col-md-3"></div>
+        <div class="col-10 col-md-6">
             <h1 class="text-center">Let's Talk</h1>
             <form class="content">
                 <div class="form-group">
@@ -21,6 +21,6 @@
                 </div>
             </form>
         </div>
-        <div class="col"></div>
+        <div class="col-1 col-md-3"></div>
     </div>
 </div>
