Start of album implementation

--- a/src/app/layout/albums/albums.component.scss
+++ b/src/app/layout/albums/albums.component.scss
@@ -1,12 +1,4 @@
-.container {
+.contain {
   margin-top: 3rem;
   margin-bottom: 3rem;
-  .album-cover {
-    border: 1px solid;
-    margin: 2rem;
-    img {
-      width: 100%;
-      padding: 2rem;
-    }
-  }
 }
