--- a/src/app/layout/albums/albums.component.html
+++ b/src/app/layout/albums/albums.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container contain">
     <div class="row">
         <div class="col-1 col-md-3"></div>
         <div class="col-10 col-md-6">
@@ -7,17 +7,9 @@
         <div class="col-1 col-md-3"></div>
     </div>
     <div class="row">
-        <div class="col-12 col-sm-4 album-cover">
-            <img src="assets/images/logo-2.png" alt="">
-            <h2 class="text-center">Album title</h2>
-        </div>
-        <div class="col-12 col-sm-4 album-cover">
-            <img src="assets/images/logo-2.png" alt="">
-            <h2 class="text-center">Album title</h2>
-        </div>
-        <div class="col-12 col-sm-4 album-cover">
-            <img src="assets/images/logo-2.png" alt="">
-            <h2 class="text-center">Album title</h2>
+        <div class="col-sm-6" *ngFor="let album of albums">
+            <app-album albumTitle="{{album.albumTitle}}" albumCoverPhotoLink="{{album.albumCoverPhotoLink}}">
+            </app-album>
         </div>
     </div>
 </div>
