Add link for albums to navbar

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -20,6 +20,13 @@
       .active {
         border-bottom: 2px solid #ff5700;
       }
+      #navbarSupportedContent15 {
+        margin-left: 25px;
+        li {
+          margin-left: 10px;
+          margin-right: 10px;
+        }
+      }
     }
   }
   footer {
