--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -18,6 +18,10 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item" routerLinkActive="active" data-toggle="collapse"
                         data-target=".navbar-collapse.show">
+                        <a class="nav-link text-center" routerLink="/albums">Albums</a>
+                    </li>
+                    <li class="nav-item" routerLinkActive="active" data-toggle="collapse"
+                        data-target=".navbar-collapse.show">
                         <a class="nav-link text-center" routerLink="/about">About</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active" data-toggle="collapse"
